// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regular getPlaces 1`] = `
Object {
  "method": "GET",
  "path": "/1/indexes/places/some_item",
  "qs": Object {},
  "requestOptions": undefined,
  "requestType": "read",
}
`;

exports[`regular getPlaces 2`] = `
Object {
  "method": "GET",
  "path": "/1/indexes/places/some_item",
  "qs": Object {
    "attributes": "one,name",
  },
  "requestOptions": undefined,
  "requestType": "read",
}
`;
